Starting Movable character implementation
Implemented PlayerControlledEntityAction on the base of the commands classes. Didn't find a way to combine Command and Action so use the Command Pattern 2 times. Also refactored input handling so that the action and command works side by side.
Also added a DrawSingleRenderable in the EntityRenderer